[package]
name = "sampara"
version = "0.1.0"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"

[features]
biquad = []
buffer = []
interpolate = []
rms = ["buffer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", features = ["libm"] }
