[package]
name = "sampara"
version = "0.1.1"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"
description = "A suite of tools for working with audio DSP samples, frames, and signals."
license = "MIT"

[features]
biquad = []
buffer = []
generator = []
interpolate = []
rms = ["buffer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", features = ["libm"] }
