[package]
name = "sampara"
version = "0.1.2"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2021"
description = "A suite of tools for working with audio DSP samples, frames, and signals."
license = "MIT"

[features]
# biquad = []
# buffer = []
# generator = []
# interpolate = []
# rms = ["buffer"]
# window = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", features = ["libm"] }
paste = "1"
gcd = "2"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
proptest = "1.0.0"
